passing argumen dari 1 activity ke activity lain & desain halaman game sementara

--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="130dp"
         android:layout_marginBottom="22dp"
         android:background="@drawable/level_button"
+        android:onClick="playLevel1"
         android:text="Level 1"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/button_level2"
@@ -29,6 +30,7 @@
         android:layout_marginTop="22dp"
         android:layout_marginBottom="22dp"
         android:background="@drawable/level_button"
+        android:onClick="playLevel2"
         android:text="Level 2"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/button_level3"
@@ -44,6 +46,7 @@
         android:layout_marginTop="22dp"
         android:layout_marginBottom="22dp"
         android:background="@drawable/level_button"
+        android:onClick="playLevel3"
         android:text="Level 3"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/button_level4"
@@ -59,6 +62,7 @@
         android:layout_marginTop="22dp"
         android:layout_marginBottom="22dp"
         android:background="@drawable/level_button"
+        android:onClick="playLevel4"
         android:text="Level 4"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/button_level5"
@@ -74,6 +78,7 @@
         android:layout_marginTop="22dp"
         android:layout_marginBottom="108dp"
         android:background="@drawable/level_button"
+        android:onClick="playLevel5"
         android:text="Level 5"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,14 +94,16 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="345dp"
-        android:layout_marginRight="345dp"
-        android:layout_marginBottom="665dp"
+        android:layout_marginEnd="355dp"
+        android:layout_marginRight="355dp"
+        android:layout_marginBottom="675dp"
         android:background="@drawable/back_button"
         android:onClick="mainMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
