--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -30,108 +30,137 @@
         android:id="@+id/text_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="101dp"
+        android:layout_marginLeft="101dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginRight="157dp"
+        android:layout_marginBottom="143dp"
         android:text="Level X"
         android:textColor="#FAF6F6"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="157dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintBottom_toTopOf="@+id/text_question"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_back"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="86dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="50dp"
         android:text="Score"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="301dp"
-        tools:layout_editor_absoluteY="115dp" />
+        app:layout_constraintBottom_toTopOf="@+id/text_question"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/text_num"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_qNum"
+        android:id="@+id/text_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="86dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginBottom="50dp"
+        android:text="1/3"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="115dp" />
-
-    <TextView
-        android:id="@+id/text_qNum2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="/"
-        android:textColor="#FAF6F6"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="115dp" />
-
-    <TextView
-        android:id="@+id/text_qNum3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3"
-        android:textColor="#FAF6F6"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="82dp"
-        tools:layout_editor_absoluteY="115dp" />
+        app:layout_constraintBottom_toTopOf="@+id/text_question"
+        app:layout_constraintEnd_toStartOf="@+id/text_score"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_question"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="276dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="193dp"
+        android:layout_marginBottom="77dp"
         android:text="Question"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="200dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button_answer1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_answer1"
         android:layout_width="279dp"
         android:layout_height="60dp"
+        android:layout_marginTop="380dp"
+        android:layout_marginBottom="291dp"
         android:background="@drawable/level_button"
         android:onClick="clickAnswer1"
-        android:textAllCaps="false"
         android:text="Answer 1"
+        android:textAllCaps="false"
         android:textSize="21sp"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="380dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_answer2"
         android:layout_width="279dp"
         android:layout_height="60dp"
+        android:layout_marginTop="460dp"
+        android:layout_marginBottom="211dp"
         android:background="@drawable/level_button"
         android:onClick="clickAnswer2"
-        android:textAllCaps="false"
         android:text="Answer 2"
+        android:textAllCaps="false"
         android:textSize="21sp"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="460dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_answer3"
         android:layout_width="279dp"
         android:layout_height="60dp"
+        android:layout_marginTop="540dp"
+        android:layout_marginBottom="131dp"
         android:background="@drawable/level_button"
         android:onClick="clickAnswer3"
-        android:textAllCaps="false"
         android:text="Answer 3"
+        android:textAllCaps="false"
         android:textSize="21sp"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="540dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_answer4"
         android:layout_width="279dp"
         android:layout_height="60dp"
+        android:layout_marginTop="620dp"
+        android:layout_marginBottom="51dp"
         android:background="@drawable/level_button"
         android:onClick="clickAnswer4"
-        android:textAllCaps="false"
         android:text="Answer 4"
+        android:textAllCaps="false"
         android:textSize="21sp"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="620dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
