tampilan dan backend GameActivity 90%, create dan read Database

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -41,6 +41,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/text_question"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_back"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,6 +58,8 @@
         android:text="Score"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
+        android:gravity="center"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/text_question"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/text_num"
@@ -75,6 +78,8 @@
         android:text="1/3"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
+        android:gravity="center"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/text_question"
         app:layout_constraintEnd_toStartOf="@+id/text_score"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +91,8 @@
         android:layout_height="110dp"
         android:layout_marginTop="193dp"
         android:layout_marginBottom="77dp"
+        android:textAlignment="center"
+        android:gravity="center"
         android:text="Question"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
@@ -101,7 +108,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="380dp"
         android:layout_marginBottom="291dp"
-        android:background="@drawable/level_button"
+        android:background="@drawable/answer_button"
         android:onClick="clickAnswer1"
         android:text="Answer 1"
         android:textAllCaps="false"
@@ -118,7 +125,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="460dp"
         android:layout_marginBottom="211dp"
-        android:background="@drawable/level_button"
+        android:background="@drawable/answer_button"
         android:onClick="clickAnswer2"
         android:text="Answer 2"
         android:textAllCaps="false"
@@ -135,7 +142,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="540dp"
         android:layout_marginBottom="131dp"
-        android:background="@drawable/level_button"
+        android:background="@drawable/answer_button"
         android:onClick="clickAnswer3"
         android:text="Answer 3"
         android:textAllCaps="false"
@@ -152,7 +159,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="620dp"
         android:layout_marginBottom="51dp"
-        android:background="@drawable/level_button"
+        android:background="@drawable/answer_button"
         android:onClick="clickAnswer4"
         android:text="Answer 4"
         android:textAllCaps="false"
@@ -160,6 +167,28 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="165dp"
+        android:layout_marginLeft="165dp"
+        android:layout_marginTop="85dp"
+        android:layout_marginEnd="166dp"
+        android:layout_marginRight="166dp"
+        android:layout_marginBottom="572dp"
+        android:background="@drawable/timer"
+        android:text="10"
+        android:textColor="#FAF6F6"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
