--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,7 +18,7 @@
         android:layout_marginRight="355dp"
         android:layout_marginBottom="675dp"
         android:background="@drawable/back_button"
-        android:onClick="mainMenu"
+        android:onClick="listLevel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -30,19 +30,18 @@
         android:id="@+id/text_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="101dp"
-        android:layout_marginLeft="101dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="157dp"
+        android:layout_marginLeft="157dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="157dp"
         android:layout_marginRight="157dp"
-        android:layout_marginBottom="143dp"
+        android:layout_marginBottom="20dp"
         android:text="Level X"
         android:textColor="#FAF6F6"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/text_question"
+        app:layout_constraintBottom_toTopOf="@+id/timer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button_back"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -55,11 +54,11 @@
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="50dp"
-        android:text="Score"
+        android:gravity="center"
+        android:text="0"
+        android:textAlignment="center"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
-        android:gravity="center"
-        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/text_question"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/text_num"
@@ -75,11 +74,11 @@
         android:layout_marginEnd="100dp"
         android:layout_marginRight="100dp"
         android:layout_marginBottom="50dp"
+        android:gravity="center"
         android:text="1/3"
+        android:textAlignment="center"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
-        android:gravity="center"
-        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/text_question"
         app:layout_constraintEnd_toStartOf="@+id/text_score"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,9 +90,9 @@
         android:layout_height="110dp"
         android:layout_marginTop="193dp"
         android:layout_marginBottom="77dp"
-        android:textAlignment="center"
         android:gravity="center"
         android:text="Question"
+        android:textAlignment="center"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/button_answer1"
@@ -176,20 +175,20 @@
         android:layout_height="80dp"
         android:layout_marginStart="165dp"
         android:layout_marginLeft="165dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="166dp"
         android:layout_marginRight="166dp"
-        android:layout_marginBottom="572dp"
+        android:layout_marginBottom="560dp"
         android:background="@drawable/timer"
+        android:gravity="center"
         android:text="10"
+        android:textAlignment="center"
         android:textColor="#FAF6F6"
         android:textSize="30sp"
-        android:textAlignment="center"
-        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/text_level" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
