--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="#000000"
-tools:context=".MainActivity">
-
-<TextView
-    android:id="@+id/judul"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#000000"
-    android:hapticFeedbackEnabled="false"
-    android:text="Math Quizzes"
-    android:textColor="#FFFFFF"
-    android:textSize="48sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.29" />
+    tools:context=".MainActivity">
 
-<Button
-    android:id="@+id/button_play"
-    android:layout_width="228dp"
-    android:layout_height="60dp"
-    android:layout_marginTop="50dp"
-    android:layout_marginBottom="32dp"
-    android:onClick="play"
-    android:text="Play"
-    android:textSize="30sp"
-    android:background="@drawable/play_button"
-    app:layout_constraintBottom_toTopOf="@+id/button_highscore"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/judul" />
+    <TextView
+        android:id="@+id/judul"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#000000"
+        android:hapticFeedbackEnabled="false"
+        android:text="Math Quizzes"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.29" />
 
-<Button
-    android:id="@+id/button_highscore"
-    android:layout_width="228dp"
-    android:layout_height="61dp"
-    android:layout_marginTop="32dp"
-    android:layout_marginBottom="32dp"
-    android:text="Highscore"
-    android:textSize="30sp"
-    android:background="@drawable/highscore_button"
-    app:layout_constraintBottom_toTopOf="@+id/button_settings"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/button_play" />
+    <Button
+        android:id="@+id/button_play"
+        android:layout_width="228dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/play_button"
+        android:onClick="play"
+        android:text="Play"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_highscore"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/judul" />
 
-<Button
-    android:id="@+id/button_settings"
-    android:layout_width="228dp"
-    android:layout_height="61dp"
-    android:layout_marginTop="32dp"
-    android:layout_marginBottom="80dp"
-    android:text="Settings"
-    android:textSize="30sp"
-    android:background="@drawable/settings_button"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/button_highscore" />
+    <Button
+        android:id="@+id/button_highscore"
+        android:layout_width="228dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="472dp"
+        android:layout_marginBottom="198dp"
+        android:background="@drawable/highscore_button"
+        android:onClick="highscore"
+        android:text="Highscore"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
