udate view highscore, fix bug, final

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -30,16 +30,16 @@
         android:id="@+id/text_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="157dp"
-        android:layout_marginLeft="157dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="158dp"
+        android:layout_marginLeft="158dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="157dp"
         android:layout_marginRight="157dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="650dp"
         android:text="Level X"
         android:textColor="#FAF6F6"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/timer"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -48,39 +48,39 @@
         android:id="@+id/text_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginStart="330dp"
+        android:layout_marginLeft="330dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginRight="68dp"
+        android:layout_marginBottom="583dp"
         android:gravity="center"
         android:text="0"
         android:textAlignment="center"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/text_question"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/text_num"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginLeft="68dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="306dp"
+        android:layout_marginRight="306dp"
+        android:layout_marginBottom="583dp"
         android:gravity="center"
         android:text="1/3"
         android:textAlignment="center"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/text_question"
-        app:layout_constraintEnd_toStartOf="@+id/text_score"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -88,14 +88,14 @@
         android:id="@+id/text_question"
         android:layout_width="276dp"
         android:layout_height="110dp"
-        android:layout_marginTop="193dp"
-        android:layout_marginBottom="77dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginBottom="401dp"
         android:gravity="center"
         android:text="Question"
         android:textAlignment="center"
         android:textColor="#FAF6F6"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_answer1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -175,10 +175,10 @@
         android:layout_height="80dp"
         android:layout_marginStart="165dp"
         android:layout_marginLeft="165dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="111dp"
         android:layout_marginEnd="166dp"
         android:layout_marginRight="166dp"
-        android:layout_marginBottom="560dp"
+        android:layout_marginBottom="540dp"
         android:background="@drawable/timer"
         android:gravity="center"
         android:text="10"
@@ -189,6 +189,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_level" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
