--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -26,6 +26,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="295dp"
+        android:layout_height="402dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginBottom="89dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/highscore_background" />
+
     <TextView
         android:id="@+id/text_highscore"
         android:layout_width="wrap_content"
