--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -77,6 +77,7 @@
         android:layout_marginTop="368dp"
         android:layout_marginBottom="253dp"
         android:gravity="center"
+        android:background="@drawable/highscore_background"
         android:text="0"
         android:textAlignment="center"
         android:textColor="#FAF6F6"
@@ -89,7 +90,7 @@
 
     <Button
         android:id="@+id/button_retry"
-        android:layout_width="228dp"
+        android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginTop="531dp"
         android:layout_marginBottom="140dp"
