--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -8,86 +8,6 @@
     tools:context=".LevelActivity">
 
     <Button
-        android:id="@+id/button_level1"
-        android:layout_width="228dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginBottom="22dp"
-        android:background="@drawable/level_button"
-        android:onClick="playLevel1"
-        android:text="Level 1"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_level2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button_level2"
-        android:layout_width="228dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="22dp"
-        android:background="@drawable/level_button"
-        android:onClick="playLevel2"
-        android:text="Level 2"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_level3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_level1" />
-
-    <Button
-        android:id="@+id/button_level3"
-        android:layout_width="228dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="22dp"
-        android:background="@drawable/level_button"
-        android:onClick="playLevel3"
-        android:text="Level 3"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_level4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_level2" />
-
-    <Button
-        android:id="@+id/button_level4"
-        android:layout_width="228dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="22dp"
-        android:background="@drawable/level_button"
-        android:onClick="playLevel4"
-        android:text="Level 4"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_level5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_level3" />
-
-    <Button
-        android:id="@+id/button_level5"
-        android:layout_width="228dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="108dp"
-        android:background="@drawable/level_button"
-        android:onClick="playLevel5"
-        android:text="Level 5"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_level4" />
-
-    <Button
         android:id="@+id/button_back"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -105,5 +25,327 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ScrollView
+        android:layout_width="237dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="90dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="77dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginRight="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button_level1"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel1"
+                android:text="Level 1"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level2"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel2"
+                android:text="Level 2"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level3"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel3"
+                android:text="Level 3"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level4"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel4"
+                android:text="Level 4"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level5"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel5"
+                android:text="Level 5"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level6"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel6"
+                android:text="Level 6"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level7"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel7"
+                android:text="Level 7"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level8"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel8"
+                android:text="Level 8"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level9"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel9"
+                android:text="Level 9"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level10"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel10"
+                android:text="Level 10"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level11"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel11"
+                android:text="Level 11"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level12"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel12"
+                android:text="Level 12"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level13"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel13"
+                android:text="Level 13"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level14"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel14"
+                android:text="Level 14"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level15"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel15"
+                android:text="Level 15"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level16"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel16"
+                android:text="Level 16"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level17"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel17"
+                android:text="Level 17"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level18"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel18"
+                android:text="Level 18"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level19"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel19"
+                android:text="Level 19"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level20"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel20"
+                android:text="Level 20"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level21"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel21"
+                android:text="Level 21"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level22"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel22"
+                android:text="Level 22"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level23"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel23"
+                android:text="Level 23"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level24"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel24"
+                android:text="Level 24"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level25"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel25"
+                android:text="Level 25"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level26"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel26"
+                android:text="Level 26"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level27"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel27"
+                android:text="Level 27"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level28"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel28"
+                android:text="Level 28"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level29"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel29"
+                android:text="Level 29"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button_level30"
+                android:layout_width="235dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="22dp"
+                android:layout_marginBottom="61dp"
+                android:background="@drawable/level_button"
+                android:onClick="playLevel30"
+                android:text="Level 30"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
